# src/main/java/com/jibi/controller/HealthController.java
@@ -1,5 +1,6 @@
 package com.jibi.controller;
 
+import com.jibi.model.HealthModel;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiResponse;
@@ -9,18 +10,16 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Date;
-
 @Api(value = "Health Api")
 @RestController(value = "Health Api")
 @RequestMapping("/health")
 public class HealthController {
 
-    @ApiOperation(value = "Health api", response = String.class)
+    @ApiOperation(value = "Health api", response = HealthModel.class)
     @ApiResponses(value = {@ApiResponse(code = 200, message = "Ok"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    @RequestMapping(method = RequestMethod.GET, produces = {MediaType.TEXT_PLAIN_VALUE})
-    public String health() {
-        return "Server time " + new Date().toString();
+    @RequestMapping(method = RequestMethod.GET, produces = {MediaType.APPLICATION_JSON_VALUE})
+    public HealthModel health() {
+        return new HealthModel();
     }
 }
